Merge para la versión 1.43